[package]
name = "rtplot"
version = "0.1.0"
authors = ["ostrosco <ostrosco@fastmail.fm>"]
edition = "2018"

[dependencies]
glium = "0.25.1"
cgmath = "0.17"
imgui = "0.2"
imgui-glium-renderer = "0.2"
imgui-winit-support = "0.2"
itertools-num = "0.1"
num = "0.2"
slice-deque = "0.1"
ttf-noto-sans = "0.1"

[dev-dependencies]
rand = "0.6"
