[package]
name = "rtplot"
version = "0.1.0"
authors = ["ostrosco <ostrosco@fastmail.fm>"]
edition = "2018"
description = "A library for generating plots of real-time data."
homepage = "https://github.com/ostrosco/rtplot"
repository = "https://github.com/ostrosco/rtplot"
license = "MIT"

[dependencies]
glium = "0.22"
cgmath = "0.17"
glium_text_rusttype = "0.3.2"
lyon = "0.14"
lyon_path = "0.14"
itertools-num = "0.1"
num = "0.2"
slice-deque = "0.1"
ttf-noto-sans = "0.1"

[dev-dependencies]
rand = "0.7.2"
rand_distr = "0.2.2"
